--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ Table Of Contents:
 Colors:
 
 - Text, navbar links - white #f8f1f1
-- Buttons, bullets, icons - turquoise #f59b9e
+- Buttons, bullets, icons - turquoise #019697
 - Navbar - navy #780626
 - Backgrounds - dark denim #262431
 - Backgrounds - denim #2f2c3d
@@ -103,7 +103,7 @@ a:hover {
 }
 
 a.turquoise {
-	color: #f59b9e;
+	color: #019697;
 }
 
 a.white {
@@ -121,9 +121,9 @@ a.white {
 .btn-solid-reg {
 	display: inline-block;
 	padding: 0.2875rem 1.425rem 0.2875rem 1.425rem;
-	border: 0.125rem solid #f59b9e;
+	border: 0.125rem solid #019697;
 	border-radius: 2rem;
-	background-color: #f59b9e;
+	background-color: #019697;
 	color: #fff;
 	font: 700 0.75rem/0 "Montserrat", sans-serif;
 	text-decoration: none;
@@ -132,16 +132,16 @@ a.white {
 
 .btn-solid-reg:hover {
 	background-color: transparent;
-	color: #f59b9e;
+	color: #019697;
 	text-decoration: none;
 }
 
 .btn-solid-lg {
 	display: inline-block;
 	padding: 1.375rem 2.625rem 1.375rem 2.625rem;
-	border: 0.125rem solid #f59b9e;
+	border: 0.125rem solid #019697;
 	border-radius: 2rem;
-	background-color: #f59b9e;
+	background-color: #019697;
 	color: #fff;
 	font: 700 0.75rem/0 "Montserrat", sans-serif;
 	text-decoration: none;
@@ -150,7 +150,7 @@ a.white {
 
 .btn-solid-lg:hover {
 	background-color: transparent;
-	color: #f59b9e;
+	color: #019697;
 	text-decoration: none;
 }
 
@@ -168,17 +168,17 @@ a.white {
 .btn-outline-reg {
 	display: inline-block;
 	padding: 1.1875rem 2.125rem 1.1875rem 2.125rem;
-	border: 0.125rem solid #f59b9e;
+	border: 0.125rem solid #019697;
 	border-radius: 2rem;
 	background-color: transparent;
-	color: #f59b9e;
+	color: #019697;
 	font: 700 0.75rem/0 "Montserrat", sans-serif;
 	text-decoration: none;
 	transition: all 0.2s;
 }
 
 .btn-outline-reg:hover {
-	background-color: #f59b9e;
+	background-color: #019697;
 	color: #fff;
 	text-decoration: none;
 }
@@ -186,17 +186,17 @@ a.white {
 .btn-outline-lg {
 	display: inline-block;
 	padding: 1.375rem 2.625rem 1.375rem 2.625rem;
-	border: 0.125rem solid #f59b9e;
+	border: 0.125rem solid #019697;
 	border-radius: 2rem;
 	background-color: transparent;
-	color: #f59b9e;
+	color: #019697;
 	font: 700 0.75rem/0 "Montserrat", sans-serif;
 	text-decoration: none;
 	transition: all 0.2s;
 }
 
 .btn-outline-lg:hover {
-	background-color: #f59b9e;
+	background-color: #019697;
 	color: #fff;
 	text-decoration: none;
 }
@@ -204,17 +204,17 @@ a.white {
 .btn-outline-sm {
 	display: inline-block;
 	padding: 1rem 1.625rem 0.875rem 1.625rem;
-	border: 0.125rem solid #f59b9e;
+	border: 0.125rem solid #019697;
 	border-radius: 2rem;
 	background-color: transparent;
-	color: #f59b9e;
+	color: #019697;
 	font: 700 0.625rem/0 "Montserrat", sans-serif;
 	text-decoration: none;
 	transition: all 0.2s;
 }
 
 .btn-outline-sm:hover {
-	background-color: #f59b9e;
+	background-color: #019697;
 	color: #fff;
 	text-decoration: none;
 }
@@ -362,9 +362,9 @@ input[type='checkbox'] {
 	display: inline-block;
 	width: 100%;
 	height: 3.125rem;
-	border: 1px solid #f59b9e;
+	border: 1px solid #019697;
 	border-radius: 1.5rem;
-	background-color: #f59b9e;
+	background-color: #019697;
 	color: #fff;
 	font: 700 0.75rem/1.75rem "Montserrat", sans-serif;
 	cursor: pointer;
@@ -373,7 +373,7 @@ input[type='checkbox'] {
 
 .form-control-submit-button:hover {
 	background-color: transparent;
-	color: #f59b9e;
+	color: #019697;
 }
 
 /* Form Success And Error Message Formatting */
@@ -658,7 +658,7 @@ input[type='checkbox'] {
 
 .navbar-custom .nav-item .nav-link:hover,
 .navbar-custom .nav-item .nav-link.active {
-	color: #f59b9e;
+	color: #019697;
 }
 
 /* Dropdown Menu */
@@ -703,7 +703,7 @@ input[type='checkbox'] {
 }
 
 .navbar-custom .dropdown-item:hover .item-text {
-	color: #f59b9e;
+	color: #019697;
 }
 
 .navbar-custom .dropdown-items-divide-hr {
@@ -767,7 +767,7 @@ input[type='checkbox'] {
 }
 
 .header #js-rotating {
-	color: #f59b9e;
+	color: #019697;
 }
 
 .header .p-large {
@@ -881,9 +881,9 @@ input[type='checkbox'] {
 
 .tabs .nav-link.active,
 .tabs .nav-link:hover {
-	border-bottom: 0.1875rem solid #f59b9e;
+	border-bottom: 0.1875rem solid #019697;
 	background-color: transparent;
-	color: #f59b9e;
+	color: #019697;
 }
 
 .tabs .nav-link .fas {
@@ -913,7 +913,7 @@ input[type='checkbox'] {
 	width: 3.5rem;
 	height: 3.5rem;
 	border-radius: 50%;
-	background-color: #f59b9e;
+	background-color: #019697;
 	text-align: center;
 	vertical-align: top;
 }
@@ -1167,7 +1167,7 @@ input[type='checkbox'] {
 	margin-bottom: 1.125rem;
 	margin-left: 0;
 	border: 0;
-	background-color: #f59b9e;
+	background-color: #019697;
 	text-align: left;
 }
 
@@ -1188,7 +1188,7 @@ input[type='checkbox'] {
 .lightbox-basic table .icon-cell {
 	width: 2rem;
 	padding-right: 0.25rem;
-	color: #f59b9e;
+	color: #019697;
 	text-align: center;
 }
 
@@ -1197,7 +1197,7 @@ input[type='checkbox'] {
 	width: auto;
 	height: auto;
 	margin-left: 0.375rem;
-	color: #f59b9e;
+	color: #019697;
 	opacity: 1;
 }
 
@@ -1314,7 +1314,7 @@ input[type='checkbox'] {
 
 .counter #counter .counter-info {
 	margin-bottom: 0;
-	color: #f59b9e;
+	color: #019697;
 	font: 300 0.875rem/1.25rem "Open Sans", sans-serif;
 	vertical-align: middle;
 }
@@ -1346,7 +1346,7 @@ input[type='checkbox'] {
 .form .list-unstyled .fab {
 	margin-right: 0.5rem;
 	font-size: 0.875rem;
-	color: #f59b9e;
+	color: #019697;
 }
 
 .form .list-unstyled .fa-phone {
@@ -1371,7 +1371,7 @@ input[type='checkbox'] {
 }
 
 .footer .list-unstyled .fas {
-	color: #f59b9e;
+	color: #019697;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -1401,7 +1401,7 @@ input[type='checkbox'] {
 }
 
 .footer .fa-stack:hover .fa-stack-2x {
-    color: #f59b9e;
+    color: #019697;
 }
 
 
@@ -1433,7 +1433,7 @@ a.back-to-top {
 	width: 2.625rem;
 	height: 2.625rem;
 	border-radius: 1.875rem;
-	background: #f59b9e url("../images/up-arrow.png") no-repeat center 47%;
+	background: #019697 url("../images/up-arrow.png") no-repeat center 47%;
 	background-size: 1.125rem 1.125rem;
 	text-indent: -9999px;
 }
@@ -1487,7 +1487,7 @@ a:hover.back-to-top {
 }
 
 .ex-basic-2 .list-unstyled .fas {
-	color: #f59b9e;
+	color: #019697;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -1559,7 +1559,7 @@ a:hover.back-to-top {
 	
 	.navbar-custom .nav-item .nav-link:hover,
 	.navbar-custom .nav-item .nav-link.active {
-		color: #f59b9e;
+		color: #019697;
 	}
 
 	.navbar-custom.top-nav-collapse {
@@ -1578,7 +1578,7 @@ a:hover.back-to-top {
 	
 	.navbar-custom.top-nav-collapse .nav-item .nav-link:hover,
 	.navbar-custom.top-nav-collapse .nav-item .nav-link.active {
-		color: #f59b9e;
+		color: #019697;
 	}
 
 	.navbar-custom .dropdown-menu {
@@ -1743,7 +1743,7 @@ a:hover.back-to-top {
 	}
 	
 	.navbar-custom .fa-stack-2x {
-		color: #f59b9e;
+		color: #019697;
 		transition: all 0.2s ease;
 	}
 	
@@ -1757,7 +1757,7 @@ a:hover.back-to-top {
 	}
 
 	.navbar-custom .fa-stack:hover .fa-stack-1x {
-		color: #f59b9e;
+		color: #019697;
 	}
 	/* end of navigation */
 
