Corvus Site Update 1/2

--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,40 @@ a.white {
 	font: 700 1rem/1.5rem "Montserrat", sans-serif;
 }
 
+.btn-download-device {
+	display: inline-block;
+	padding: 0.175rem 0.625rem 0.175rem 0.625rem;
+	border: 0.125rem solid #019697;
+	border-radius: 2rem;
+	background-color: transparent;
+	color: #019697;
+	font: 700 0.75rem/0 "Montserrat", sans-serif;
+	text-decoration: none;
+	transition: all 0.2s;
+	font-size: 1.065rem;
+	width: 100%;
+	border: none;
+    text-align: left;
+}
+
+.btn-download-device:hover {
+	background-color: transparent;
+	color: #fff;
+	text-decoration: none;
+}
+.btn-download-device:after {
+  content: '\2304';
+  color: #019697;
+  font-weight: bold;
+  font-size: 1.065rem;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  
+}
+
 .btn-solid-reg {
 	display: inline-block;
 	padding: 0.2875rem 1.425rem 0.2875rem 1.425rem;
@@ -2109,6 +2143,25 @@ a:hover.back-to-top {
 	.ex-basic-2 .image-container-small {
 		margin-left: 1.75rem;
 	}
+	
+	.changelog-container {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+    }
+	
+	.changelog-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+    }	
+	
+	hr.new2 {
+    border-top: 1px dashed white;
+    }
 	/* end of extra pages */
 }
 /* end of min-width width 1200px */
